commit rama pruebas

--- a/guia02/primerversion.html
+++ b/guia02/primerversion.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <p>Rama Desarrollo</p>
-    
+    <p>Rama Pruebas</p>
+
     <p>“Git fue creado pensando en la eficiencia y la confiabilidad del
     mantenimiento de versiones de aplicaciones cuando éstas tienen un gran
     número de archivos de código fuente, es decir Git nos proporciona las
