commit rama produccion

--- a/guia02/primerversion.html
+++ b/guia02/primerversion.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p>Rama Pruebas</p>
+    <p>Rama Produccion</p>
 
     <p>“Git fue creado pensando en la eficiencia y la confiabilidad del
     mantenimiento de versiones de aplicaciones cuando éstas tienen un gran
